# simple-mermaid

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: flowchart.mmd  graph.mmd  larger.mmd  lib.rs  netflix.mmd  sequence.mmd
